--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -5,61 +5,97 @@
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
     <body>
-      <trans-unit id="EhVukhv" resname="Id">
-        <source>Id</source>
-        <target>__Id</target>
+      <trans-unit id="pWFFJwz" resname="id">
+        <source>id</source>
+        <target>Id</target>
       </trans-unit>
-      <trans-unit id="3NHVIj9" resname="Name">
-        <source>Name</source>
+      <trans-unit id="gqNTf.D" resname="name">
+        <source>name</source>
         <target>Name</target>
       </trans-unit>
-      <trans-unit id="lpzL089" resname="Email">
-        <source>Email</source>
-        <target>__Email</target>
+      <trans-unit id="giREF.l" resname="email">
+        <source>email</source>
+        <target>Email</target>
       </trans-unit>
-      <trans-unit id="60xOI5E" resname="Date of birth">
-        <source>Date of birth</source>
+      <trans-unit id="kbTty89" resname="date_of_birth">
+        <source>date_of_birth</source>
         <target>Date of birth</target>
       </trans-unit>
-      <trans-unit id="kg5BPH1" resname="Status">
-        <source>Status</source>
+      <trans-unit id="7spb_Di" resname="plain_password">
+        <source>plain_password</source>
+        <target>Plain Password</target>
+      </trans-unit>
+      <trans-unit id="sSJ75Q9" resname="agree_terms">
+        <source>agree_terms</source>
+        <target>Agree Terms</target>
+      </trans-unit>
+      <trans-unit id="BzwWNMS" resname="status">
+        <source>status</source>
         <target>Status</target>
       </trans-unit>
       <trans-unit id="Kw3N1AA" resname="actions">
         <source>actions</source>
         <target>__actions</target>
       </trans-unit>
-      <trans-unit id="tRLZfny" resname="User">
-        <source>User</source>
-        <target>__User</target>
+      <trans-unit id="BPiZbad" resname="user">
+        <source>user</source>
+        <target>User</target>
       </trans-unit>
-      <trans-unit id="RkxP.QG" resname="Edit">
-        <source>Edit</source>
-        <target>__Edit</target>
+      <trans-unit id="G8BLUpH" resname="index">
+        <source>index</source>
+        <target>Index</target>
       </trans-unit>
-      <trans-unit id="4tClSWj" resname="Delete">
-        <source>Delete</source>
-        <target>__Delete</target>
+      <trans-unit id="JiEhxTc" resname="edit">
+        <source>edit</source>
+        <target>Edit</target>
       </trans-unit>
-      <trans-unit id="wcEAnT8" resname="Update">
-        <source>Update</source>
+      <trans-unit id="YZdZVQP" resname="delete">
+        <source>delete</source>
+        <target>Delete</target>
+      </trans-unit>
+      <trans-unit id="KTcBPyG" resname="update">
+        <source>update</source>
         <target>Update</target>
       </trans-unit>
-      <trans-unit id="0FJ_Sz1" resname="Logout">
-        <source>Logout</source>
-        <target>__Logout</target>
+      <trans-unit id="h3gPpd5" resname="register">
+        <source>register</source>
+        <target>Register</target>
       </trans-unit>
-      <trans-unit id="cB0CHQj" resname="Country">
-        <source>Country</source>
+      <trans-unit id="4XliPjz" resname="last_login">
+        <source>last_login</source>
+        <target>Last login</target>
+      </trans-unit>
+      <trans-unit id="ACcM9j_" resname="logout">
+        <source>logout</source>
+        <target>Logout</target>
+      </trans-unit>
+      <trans-unit id="r.ZOT9U" resname="country">
+        <source>country</source>
         <target>Country</target>
       </trans-unit>
-      <trans-unit id=".DP3Mkb" resname="City">
-        <source>City</source>
+      <trans-unit id="EaYsI0E" resname="city">
+        <source>city</source>
         <target>City</target>
       </trans-unit>
-      <trans-unit id="GTI_LZL" resname="Choose a country">
-        <source>Choose a country</source>
+      <trans-unit id="EVB6Di9" resname="new">
+        <source>new</source>
+        <target>new</target>
+      </trans-unit>
+      <trans-unit id="oQmcLRD" resname="no_records_found">
+        <source>no_records_found</source>
+        <target>No records found</target>
+      </trans-unit>
+      <trans-unit id="lq3JhQD" resname="choose_a_country">
+        <source>choose_a_country</source>
         <target>Choose a country</target>
+      </trans-unit>
+      <trans-unit id="0nV3QfY" resname="delete_item">
+        <source>delete_item</source>
+        <target>Are you sure you want to delete this item</target>
+      </trans-unit>
+      <trans-unit id="G20dBDp" resname="logged_as">
+        <source>logged_as</source>
+        <target>You are logged in as</target>
       </trans-unit>
       <trans-unit id="Xb3fkR_" resname="Afghanistan">
         <source>Afghanistan</source>
@@ -1056,6 +1092,74 @@
       <trans-unit id="xyGZqFt" resname="Zimbabwe">
         <source>Zimbabwe</source>
         <target>Zimbabwe</target>
+      </trans-unit>
+      <trans-unit id="QJnMRJT" resname="Are you sure you want to delete this item">
+        <source>Are you sure you want to delete this item</source>
+        <target>Are you sure you want to delete this item</target>
+      </trans-unit>
+      <trans-unit id="EhVukhv" resname="Id">
+        <source>Id</source>
+        <target>__Id</target>
+      </trans-unit>
+      <trans-unit id="3NHVIj9" resname="Name">
+        <source>Name</source>
+        <target>Name</target>
+      </trans-unit>
+      <trans-unit id="lpzL089" resname="Email">
+        <source>Email</source>
+        <target>__Email</target>
+      </trans-unit>
+      <trans-unit id="60xOI5E" resname="Date of birth">
+        <source>Date of birth</source>
+        <target>Date of birth</target>
+      </trans-unit>
+      <trans-unit id="kg5BPH1" resname="Status">
+        <source>Status</source>
+        <target>Status</target>
+      </trans-unit>
+      <trans-unit id="tRLZfny" resname="User">
+        <source>User</source>
+        <target>__User</target>
+      </trans-unit>
+      <trans-unit id="RkxP.QG" resname="Edit">
+        <source>Edit</source>
+        <target>__Edit</target>
+      </trans-unit>
+      <trans-unit id="4tClSWj" resname="Delete">
+        <source>Delete</source>
+        <target>__Delete</target>
+      </trans-unit>
+      <trans-unit id="wcEAnT8" resname="Update">
+        <source>Update</source>
+        <target>Update</target>
+      </trans-unit>
+      <trans-unit id="DTlgLcO" resname="Last login">
+        <source>Last login</source>
+        <target>__Last login</target>
+      </trans-unit>
+      <trans-unit id="0FJ_Sz1" resname="Logout">
+        <source>Logout</source>
+        <target>__Logout</target>
+      </trans-unit>
+      <trans-unit id="cB0CHQj" resname="Country">
+        <source>Country</source>
+        <target>Country</target>
+      </trans-unit>
+      <trans-unit id=".DP3Mkb" resname="City">
+        <source>City</source>
+        <target>City</target>
+      </trans-unit>
+      <trans-unit id="GTI_LZL" resname="Choose a country">
+        <source>Choose a country</source>
+        <target>Choose a country</target>
+      </trans-unit>
+      <trans-unit id="65cOsJU" resname="Last">
+        <source>Last</source>
+        <target>Last</target>
+      </trans-unit>
+      <trans-unit id="nWMiwfT" resname="Login">
+        <source>Login</source>
+        <target>Login</target>
       </trans-unit>
       <trans-unit id="kJUuiW1" resname="Date Of Birth">
         <source>Date Of Birth</source>
