--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,17 +1,26 @@
-Id: Id
-Name: Name
-Email: Email
-Date of birth: Date of birth
-Status: Status
+id: Id
+name: Name
+email: Email
+date_of_birth: Date of birth
+plain_password: Plain Password
+agree_terms: Agree Terms
+status: Status
 actions: actions
-User: User
-Edit: Edit
-Delete: Delete
-Update: Update
-Logout: Logout
-Country: Country
-City: City
-Choose a country: Choose a country
+user: User
+index: Index
+edit: Edit
+delete: Delete
+update: Update
+register: Register
+last_login: Last login
+logout: Logout
+country: Country
+city: City
+new: new
+no_records_found: No records found
+choose_a_country: Choose a country
+delete_item: Are you sure you want to delete this item?
+logged_as: You are logged in as
 
 #Countries
 Afghanistan: Afghanistan
