--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -6,6 +6,7 @@ plain_password: Plain Password
 agree_terms: Agree Terms
 status: Status
 actions: actions
+photos: photos
 user: User
 index: Index
 edit: Edit
