--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -21,6 +21,14 @@
         <source>date_of_birth</source>
         <target>Date of birth</target>
       </trans-unit>
+      <trans-unit id="AT9UQAy" resname="age">
+        <source>age</source>
+        <target>Age</target>
+      </trans-unit>
+      <trans-unit id="mNROE.R" resname="sex">
+        <source>sex</source>
+        <target>Sex</target>
+      </trans-unit>
       <trans-unit id="7spb_Di" resname="plain_password">
         <source>plain_password</source>
         <target>Plain Password</target>
@@ -1100,6 +1108,14 @@
       <trans-unit id="xyGZqFt" resname="Zimbabwe">
         <source>Zimbabwe</source>
         <target>Zimbabwe</target>
+      </trans-unit>
+      <trans-unit id="CPJxiHz" resname="M">
+        <source>M</source>
+        <target>Male</target>
+      </trans-unit>
+      <trans-unit id="9nqxCtT" resname="F">
+        <source>F</source>
+        <target>Female</target>
       </trans-unit>
       <trans-unit id="QJnMRJT" resname="Are you sure you want to delete this item">
         <source>Are you sure you want to delete this item</source>
